Bug 95144 - Linked to External Refreshes Incorrectly
Summary: Linked to External Refreshes Incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-10-17 15:51 UTC by Joel Madero
Modified: 2016-10-25 18:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Link to External Sample (158.64 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-17 15:51 UTC, Joel Madero
Details
Screenshot with calculated data an imported values. (51.93 KB, image/png)
2015-10-18 00:30 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joel Madero 2015-10-17 15:51:51 UTC
Created attachment 119700 [details]
Link to External Sample

Ubuntu 15.04 x64
LibreOffice 5.1 master

Repro Steps:
1. Download attached document;
2. When it asks if you want to refresh click yes;

Observed:
The refresh fails to grab the data and the stats page reflects a bunch of nonsense (/0 error)

Expected:
5.0.2.2 and before refreshes fine


Major - this could cause some serious headaches for people using link to external - critical might be appropriate
Comment 1 Joel Madero 2015-10-17 15:55:40 UTC
I also would argue it might deserve highest status but I'll leave that to others to decide as I'm not unbiased here :)
Comment 2 raal 2015-10-17 16:03:46 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 8273350ff48f198efc9dc9c5de5519b8cbdc0cb3
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-07_05:54:26

works with LO 4.4.2, regression
Comment 3 m_a_riosv 2015-10-18 00:30:05 UTC
Created attachment 119706 [details]
Screenshot with calculated data an imported values.

I can't reproduce, refreshing on open the file and with a manual second refresh.

Win7x64
Version: 5.1.0.0.alpha1+
Build ID: 186f32f63434e16ff5776251657f902d5808ed3d-GL
TinderBox: Win-x86@39, Branch:master, Time: 2015-10-16_09:42:47
Comment 4 Caolán McNamara 2016-07-26 20:55:47 UTC
If I restore the patch of

commit 70bb8c257e7fc402da60fa70109cece1fe4c69d1
Author: Giuseppe Castagno <giuseppe.castagno@acca-esse.eu>
Date:   Thu Mar 17 11:09:32 2016 +0100

which was reverted by

commit 37d34e2b6a96569313178ce864096722230cb3b9
Author: Giuseppe Castagno <giuseppe.castagno@acca-esse.eu>
Date:   Tue Apr 19 08:17:48 2016 +0200

    Related tdf#88502 a better implementation than the one in...
    
    ...commit 70bb8c257e7fc402da60fa70109cece1fe4c69d1.

Then I get a dialog that the https cert is unknown and if I manually trust it then this updates.

I'm not sure that we should need to manually trust it though.
Comment 5 Giuseppe Castagno (aka beppec56) 2016-07-27 16:23:04 UTC
(In reply to Caolán McNamara from comment #4)
> 
> Then I get a dialog that the https cert is unknown and if I manually trust
> it then this updates.
> 
> I'm not sure that we should need to manually trust it though.

I reverted 70bb8c257e7fc402da60fa70109cece1fe4c69d1, the dialog is called this function:
<http://opengrok.libreoffice.org/xref/core/uui/source/iahndl-ssl.cxx#248>

In this specific case is called here:
<http://opengrok.libreoffice.org/xref/core/uui/source/iahndl-ssl.cxx#305>

Manually trust it or not: well, the dialog show you the reason:
trying to connect to bugs.documentfoundation.org that present a certificate of documentfoundation.org.
I think that manually give the user the 'trust/no trust' choice is right.
Probably a different spacing of the message will help understanding, though.

As you correctly guessed for the dialog to be activated the WebDAV UCP provider needs a command env, so to give you context about 70bb8c257e7fc402da60fa70109cece1fe4c69d1:
the gerrit is here: <https://gerrit.libreoffice.org/#/c/23327>
Please note Stephan Bergmann comments.

To address his remarks, I proposed first this:
<https://gerrit.libreoffice.org/#/c/24274/>
together with:
<https://gerrit.libreoffice.org/#/c/24275/3>

For this bug I guess that something a bit similar to:
<https://gerrit.libreoffice.org/#/c/24275/3/cui/source/options/personalization.cxx>
should probably be added. I don't know where though.
Comment 6 Caolán McNamara 2016-07-27 20:17:46 UTC
Debugging other things like this that work, e.g. opening files from the command line I saw that their environment got set in unotools via things like impl_openStreamWithURL so this looks reasonable to me.

The dialog thing seems to be some problem in master that isn't in 5-2 so that's something else wrong not directly related to this really.
Comment 7 Commit Notification 2016-07-27 20:19:13 UTC
Giuseppe Castagno committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b26a2a403ca5e99b0dd07d042d47501c091af16

tdf#95144: Add a default css::ucb::XCommandEnvironment

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-07-28 11:37:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c110872b530029f84d213ae7f27d3f59fdd0f97

Related: tdf#95144 Revert fixes for bad casts and unused fields

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-07-28 11:38:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b073ef93313f9e07f9f8b7bf65dc74721b15da6c

Related: tdf#95144 rework to avoid bad casts

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-07-28 11:38:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ebd5de9de4291e7b5cbaaa912f5b4524c14ad81

Related: tdf#95144 now merge common code into a shared CertExtn struct

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.