tdf#95144: Add a default css::ucb::XCommandEnvironment

Makes use of a dedicated interaction wrapper to server
ssl certificates correctly.
See comphelper::SimpleFileAccessInteraction for details.

Change-Id: I5728225065ec03f9b793940de316ccd97ee7114d
Reviewed-on: https://gerrit.libreoffice.org/27596
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>